--- a/results/John_Doe_COMPANY_NAME_2023-06-27.html
+++ b/results/John_Doe_COMPANY_NAME_2023-06-27.html
@@ -77,9 +77,12 @@
                 <h1 id="page2" class="color-blue">SUMMARY</h1>
                 <br>
                 <div>
-                    <h3 class="color-blue">Job Fit Measurement</h3>
+                    <h3 class="color-blue">Job Fit Measurement - Resume Match To Job Description</h3>
                     <div>
-                        <img src="../resources/placeholder_pic.jpg" alt="Picture" id="pic">
+                        <img src="../tmp/job_fitment_graphic.jpg" alt="Picture" id="pic">
+                        <p class="color-blue">R1 - Minimum score of all applicants</p>
+                        <p class="color-blue">R2 - Maximum score of all applicants</p>
+                        <p class="color-blue">S - Candidate's match score</p>
                     </div>
                 </div>
                 <br>
